Fix FF scrolling issues (flexbox+overflow)

--- a/frontend/front-srv/assets/gui.ajax/res/themes/material/css/widgets.less
+++ b/frontend/front-srv/assets/gui.ajax/res/themes/material/css/widgets.less
@@ -4,6 +4,11 @@ body,#ajxp_desktop,#background-imager{
   flex: 1;
 }
 
+#ajxp_desktop{
+  /* Necessary to fix FF flexbox issue */
+  min-height: 0px;
+}
+
 #orbit_content {
   -webkit-font-smoothing: antialiased;
   .vertical_fit;
